# f4m

./: .gitignore  Attribute.cpp  Attribute.hpp  CMakeLists.txt  Event.hpp  FileLoader.cpp  FileLoader.hpp  Fmp.cpp  Fmp.hpp  MathUtil.cpp  MathUtil.h  Pattern.hpp  Sequence.cpp  Sequence.hpp  Types.h  quantitative_base_generated_pattern.txt  quantitative_data_generator.py  readme.md  test.cpp
Attribute/: Attribute.cpp  Attribute.hpp
BEEP/: Attribute.h  Beep.cpp  Beep.h  CodeTable.cpp  CodeTable.h  Common.h  Cover.cpp  Cover.h  Event.cpp  Event.h  Multi_event.cpp  Multi_event.h  Node.h  P_P_Table.cpp  P_P_Table.h  Pattern.cpp  Pattern.h  PatternTable.cpp  PatternTable.h  Sequence.cpp  Sequence.h  Window.cpp  Window.h  cover.cpp  cover.h  getopt.cpp  getopt.h  mathutil.h  params.h  runtimes.csv
DITTO/: CodeTable.cpp  CodeTable.h  Ditto.cpp  Ditto.h  DittoPattern.cpp  DittoPattern.h  DittoSequence.cpp  DittoSequence.h  Event.h  Multi_event.cpp  Multi_event.h  Node.cpp  Node.h  P_PTable.cpp  P_PTable.h  Run_synthetic_experiment.py  Window.cpp  Window.h  cover.cpp  cover.h  defines.h  getopt.cpp  getopt.h  mathutil.cpp  mathutil.h  output_fileData_data_20-01-2021_21.09.31.414529_1_minsup72.txt  params.h  patterns_20-01-2021_21.09.31.414529_1.txt  runtimes.csv  stdafx.h
Event/: Event.cpp  Event.hpp
FMP/: Fmp.cpp  Fmp.hpp  Types.h  interface.cpp
FMP/Attribute/: FMPAttribute.cpp  FMPAttribute.hpp
FMP/Event/: FMPEvent.cpp  FMPEvent.hpp
FMP/P_PTable/: P_PTable.cpp  P_PTable.h
FMP/Pattern/: FmpPattern.cpp  FmpPattern.hpp
FMP/Sequence/: FMPSequence.cpp  FMPSequence.hpp
P_PTable/: P_PTable.cpp  P_PTable.h
Pattern/: Pattern.cpp  Pattern.hpp
Sequence/: Sequence.cpp  Sequence.hpp
base/: BaseAttr.cpp  BaseAttr.hpp  BaseAttribute.cpp  BaseAttribute.hpp  BaseDS.cpp  BaseDS.hpp  BaseEvent.cpp  BaseEvent.hpp  BaseEvt.cpp  BaseEvt.hpp  BaseSeq.cpp  BaseSeq.hpp  BaseSequence.cpp  BaseSequence.hpp  FileLoader.cpp  FileLoader.hpp
data/tt/: 20180324 德国公开赛 女单第二轮 孙颖莎vs伊藤美诚-data.json  20180526 中国香港公开赛 女单半决赛 王曼昱vs伊藤美诚-data.json  20180602 中国公开赛 女单半决赛 王曼昱vs伊藤美诚-data.json  20180610 日本公开赛 女单决赛 王曼昱vs伊藤美诚-data.json  20180727 澳大利亚公开赛 女单四分之一决赛 何卓佳vs伊藤美诚-data.json  20181103 瑞典公开赛 女单半決赛 丁宁vs伊藤美诚-data.json  20181103 瑞典公开赛 女单四分之一决赛 刘诗雯vs伊藤美诚-data.json  20181104 瑞典公开赛 女单决赛 朱雨玲vs伊藤美诚-data.json  20190330 卡塔尔公开赛 女单八分之一决赛 丁宁vs伊藤美诚-data.json  20190424 布达佩斯世乒赛 女单十六分之一决赛 孙颖莎vs伊藤美诚-data.json  20190530 中国公开赛 女单十六分之一决赛 王艺迪vs伊藤美诚-data.json  20190601 中国公开赛 女单四分之一决赛 丁宁vs伊藤美诚-data.json  20190602 中国公开赛 女单半决赛 王曼昱vs伊藤美诚-data.json  20190609 香港公开赛 女单决赛 王艺迪vs伊藤美诚-data.json  20190706 韩国公开赛 女单四分之一决赛 王曼昱vs伊藤美诚-data.json  (+8 more)
